[package]
name = "slang_struct"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Macro that converts Slang style struct definitions into rust structs"
repository = "https://github.com/FacelessTiger/slang-struct-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.85"
regex = "1.11.1"

[features]
glam = []
bytemuck = []